Added support for Chest sizes: 34, 41, 48 and 55

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -4,10 +4,18 @@ long-iron-chest=Modular Chest 6x1
 long-iron-chest-1x13=Modular Chest 13x1
 long-iron-chest-1x20=Modular Chest 20x1
 long-iron-chest-1x27=Modular Chest 27x1
+long-iron-chest-1x34=Modular Chest 34x1
+long-iron-chest-1x41=Modular Chest 41x1
+long-iron-chest-1x48=Modular Chest 48x1
+long-iron-chest-1x55=Modular Chest 55x1
 long-iron-chest-v=Modular Chest 1x6
 long-iron-chest-v-1x13=Modular Chest 1x13
 long-iron-chest-v-1x20=Modular Chest 1x20
 long-iron-chest-v-1x27=Modular Chest 1x27
+long-iron-chest-v-1x34=Modular Chest 1x34
+long-iron-chest-v-1x41=Modular Chest 1x41
+long-iron-chest-v-1x48=Modular Chest 1x48
+long-iron-chest-v-1x55=Modular Chest 1x55
 
 [entity-name]
 modular-chest=Modular Chest
@@ -15,10 +23,18 @@ long-iron-chest=Modular Chest 6x1
 long-iron-chest-1x13=Modular Chest 13x1
 long-iron-chest-1x20=Modular Chest 20x1
 long-iron-chest-1x27=Modular Chest 27x1
+long-iron-chest-1x34=Modular Chest 34x1
+long-iron-chest-1x41=Modular Chest 41x1
+long-iron-chest-1x48=Modular Chest 48x1
+long-iron-chest-1x55=Modular Chest 55x1
 long-iron-chest-v=Modular Chest 1x6
 long-iron-chest-v-1x13=Modular Chest 1x13
 long-iron-chest-v-1x20=Modular Chest 1x20
 long-iron-chest-v-1x27=Modular Chest 1x27
+long-iron-chest-v-1x34=Modular Chest 1x34
+long-iron-chest-v-1x41=Modular Chest 1x41
+long-iron-chest-v-1x48=Modular Chest 1x48
+long-iron-chest-v-1x55=Modular Chest 1x55
 
 [item-description]
-modular-chest=Place these modular chests next to eachother to form longer chests. Primarily designed for use with loading and unloading of trains. (Supported lengths: 6/13/20/27)
+modular-chest=Place these modular chests next to eachother to form longer chests. Primarily designed for use with loading and unloading of trains. (Supported lengths: 6/13/20/27/34/41/48/55)
