--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -16,6 +16,23 @@ long-iron-chest-v-1x34=Modular Chest 1x34
 long-iron-chest-v-1x41=Modular Chest 1x41
 long-iron-chest-v-1x48=Modular Chest 1x48
 long-iron-chest-v-1x55=Modular Chest 1x55
+modular-steel-chest=Modular Steel Chest
+long-steel-chest=Modular Steel Chest 6x1
+long-steel-chest-1x13=Modular Steel Chest 13x1
+long-steel-chest-1x20=Modular Steel Chest 20x1
+long-steel-chest-1x27=Modular Steel Chest 27x1
+long-steel-chest-1x34=Modular Steel Chest 34x1
+long-steel-chest-1x41=Modular Steel Chest 41x1
+long-steel-chest-1x48=Modular Steel Chest 48x1
+long-steel-chest-1x55=Modular Steel Chest 55x1
+long-steel-chest-v=Modular Steel Chest 1x6
+long-steel-chest-v-1x13=Modular Steel Chest 1x13
+long-steel-chest-v-1x20=Modular Steel Chest 1x20
+long-steel-chest-v-1x27=Modular Steel Chest 1x27
+long-steel-chest-v-1x34=Modular Steel Chest 1x34
+long-steel-chest-v-1x41=Modular Steel Chest 1x41
+long-steel-chest-v-1x48=Modular Steel Chest 1x48
+long-steel-chest-v-1x55=Modular Steel Chest 1x55
 
 [entity-name]
 modular-chest=Modular Chest
@@ -35,6 +52,24 @@ long-iron-chest-v-1x34=Modular Chest 1x34
 long-iron-chest-v-1x41=Modular Chest 1x41
 long-iron-chest-v-1x48=Modular Chest 1x48
 long-iron-chest-v-1x55=Modular Chest 1x55
+modular-steel-chest=Modular Steel Chest
+long-steel-chest=Modular Steel Chest 6x1
+long-steel-chest-1x13=Modular Steel Chest 13x1
+long-steel-chest-1x20=Modular Steel Chest 20x1
+long-steel-chest-1x27=Modular Steel Chest 27x1
+long-steel-chest-1x34=Modular Steel Chest 34x1
+long-steel-chest-1x41=Modular Steel Chest 41x1
+long-steel-chest-1x48=Modular Steel Chest 48x1
+long-steel-chest-1x55=Modular Steel Chest 55x1
+long-steel-chest-v=Modular Steel Chest 1x6
+long-steel-chest-v-1x13=Modular Steel Chest 1x13
+long-steel-chest-v-1x20=Modular Steel Chest 1x20
+long-steel-chest-v-1x27=Modular Steel Chest 1x27
+long-steel-chest-v-1x34=Modular Steel Chest 1x34
+long-steel-chest-v-1x41=Modular Steel Chest 1x41
+long-steel-chest-v-1x48=Modular Steel Chest 1x48
+long-steel-chest-v-1x55=Modular Steel Chest 1x55
 
 [item-description]
 modular-chest=Place these modular chests next to eachother to form longer chests. Primarily designed for use with loading and unloading of trains. (Supported lengths: 6/13/20/27/34/41/48/55)
+modular-steel-chest=Place these modular chests next to eachother to form longer chests. Primarily designed for use with loading and unloading of trains. (Supported lengths: 6/13/20/27/34/41/48/55)
