Added mod setting to enable assembler recipes.

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -73,3 +73,13 @@ long-steel-chest-v-1x55=Modular Steel Chest 1x55
 [item-description]
 modular-chest=Place these modular chests next to eachother to form longer chests. Primarily designed for use with loading and unloading of trains. (Supported lengths: 6/13/20/27/34/41/48/55)
 modular-steel-chest=Place these modular chests next to eachother to form longer chests. Primarily designed for use with loading and unloading of trains. (Supported lengths: 6/13/20/27/34/41/48/55)
+
+[mod-setting-name]
+modular-chest-setting-iron-recipes=Enable craftable iron chest recipes
+modular-chest-setting-steel-recipes=Enable craftable steel chest recipes
+modular-chest-setting-seperate-tab=Seperate crafting recipe tab
+
+[mod-setting-description]
+modular-chest-setting-iron-recipes=Allows the character and assembly machines to craft modular iron chests of all sizes. This allows bots to place the full size chest without the need to merge and to allows blueprints to have pre-defined chests with circuits.
+modular-chest-setting-steel-recipes=Allows the character and assembly machines to craft modular steel chests of all sizes. This allows bots to place the full size chest without the need to merge and to allows blueprints to have pre-defined chests with circuits.
+modular-chest-setting-seperate-tab=Move all Modular Chests crafting recipes to their own crafting tab
